syntax = "proto3";

package com.apixio.datacatalog;

//todo
message ValueAsString {
  Type type = 1;
  string value = 2;
}


enum Type {
  String = 0;
  Int = 1;
  Double = 2;
  Float = 3;
  Long = 4;
  BigDecimal = 5;
  Boolean = 6;
}